homelab-wiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-wiki
  namespace: homelab-wiki
spec:
  selector:
    app: homelab-wiki
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
